[package]
name = "york-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp = "0.8"           # Базовый MessagePack
rmp-serde = "1.1.2"   # MessagePack для Serde